# GameGoodies

./: ARCHITECTURE.md  README.md
_old_code/compiler/: Cargo.toml
_old_code/compiler/src/: environment.rs  ir_generation.rs  main.rs
_old_code/examples/characters/smashlike/: bowser.character.json  lucina.character.json
_old_code/examples/data_compiler/: Cargo.toml
_old_code/examples/data_compiler/src/: character_info.rs
_old_code/rust_utilities/raytracing/src/: lib.rs  main.rs
_old_code/rust_utilities/src/: lib.rs
_old_code/wavrender/: Cargo.toml
_old_code/wavrender/src/: envelope.rs  main.rs  operator.rs
compiler/src/: lexer.rs  parser.rs  syntax_analysis.rs
extras/examples/: README.md  compile.bat  compile_blood.bat
extras/examples/characters/smashlike/: captfalcon.character.json  gannon.character.json  jigglypuff.character.json  link.character.json  mario.character.json  samus.character.json
extras/examples/data_compiler/src/: entity.rs  main.rs
extras/examples/program/: main.blood
rust_utilities/: Cargo.toml
rust_utilities/raytracing/: Cargo.toml
src/: lib.rs  memoizer.rs
wavrender/src/: oscillator.rs
