[package]
name = "rust_utilities"
version = "0.1.0"
authors = ["Eric Olson <eric.rob.olson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["raytracing"]
raytracing = ["raytracing"]


[dependencies]
raytracing = {path = "raytracing", optional = true}